@@ -24,6 +24,12 @@ import java.math.BigInteger;
 import java.text.DateFormat;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
+import java.time.Instant;
+import java.time.LocalDate;
+import java.time.LocalTime;
+import java.time.OffsetDateTime;
+import java.time.ZoneId;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Calendar;
@@ -40,10 +46,6 @@ import java.util.concurrent.atomic.AtomicLong;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.regex.Pattern;
-
-import lotus.domino.DateTime;
-import lotus.domino.Name;
-import lotus.domino.NotesException;
 
 import org.openntf.domino.DateRange;
 import org.openntf.domino.Document;
@@ -64,6 +66,10 @@ import org.openntf.domino.types.NamesList;
 import org.openntf.domino.types.ReadersList;
 
 import com.ibm.commons.util.StringUtil;
+
+import lotus.domino.DateTime;
+import lotus.domino.Name;
+import lotus.domino.NotesException;
 
 /**
  * @author nfreeman
@@ -174,7 +180,7 @@ public enum TypeUtils {
 			return (T) "";
 		}
 		try {
-			return type.newInstance();
+			return type.getConstructor().newInstance();
 		} catch (Exception e) {
 			throw new RuntimeException(e);
 		}
@@ -237,13 +243,17 @@ public enum TypeUtils {
 					return (T) result;
 				}
 			} else {
-				if (java.sql.Date.class.equals(type) && result instanceof Date) {
+				if (LocalDate.class.isAssignableFrom(type) && result instanceof Date) {
 					Date dt = (Date) result;
-					return (T) new java.sql.Date(dt.getTime());
+					return (T) LocalDate.ofInstant(dt.toInstant(), ZoneId.systemDefault());
 				}
-				if (java.sql.Time.class.equals(type) && result instanceof Date) {
+				if (LocalTime.class.isAssignableFrom(type) && result instanceof Date) {
 					Date dt = (Date) result;
-					return (T) new java.sql.Time(dt.getTime());
+					return (T) LocalTime.ofInstant(dt.toInstant(), ZoneId.systemDefault());
+				}
+				if(OffsetDateTime.class.isAssignableFrom(type) && result instanceof Date) {
+					Date dt = (Date) result;
+					return (T)OffsetDateTime.ofInstant(dt.toInstant(), ZoneId.systemDefault());
 				}
 				log_.log(Level.WARNING, "Auto-boxing requested a " + type.getName() + " but is returning a " + result.getClass().getName()
 						+ " in item " + itemName + " for document id " + noteid);
@@ -678,16 +688,26 @@ public enum TypeUtils {
 				} catch (InstantiationException e) {
 					DominoUtils.handleException(e);
 				}
-			} else if (java.sql.Date.class.isAssignableFrom(type) || java.sql.Time.class.isAssignableFrom(type)) {
+			} else if(LocalDate.class.isAssignableFrom(type)) {
 				Date tmpDate = toDate(v);
-				if (null == tmpDate) {
+				if(null == tmpDate) {
 					result = null;
 				} else {
-					if (java.sql.Date.class.isAssignableFrom(type)) {
-						result = new java.sql.Date(tmpDate.getTime());
-					} else {
-						result = new java.sql.Time(tmpDate.getTime());
-					}
+					result = LocalDate.ofInstant(tmpDate.toInstant(), ZoneId.systemDefault());
+				}
+			} else if(LocalTime.class.isAssignableFrom(type)) {
+				Date tmpDate = toDate(v);
+				if(null == tmpDate) {
+					result = null;
+				} else {
+					result = LocalTime.ofInstant(tmpDate.toInstant(), ZoneId.systemDefault());
+				}
+			} else if(OffsetDateTime.class.isAssignableFrom(type)) {
+				Date tmpDate = toDate(v);
+				if(null == tmpDate) {
+					result = null;
+				} else {
+					result = OffsetDateTime.ofInstant(tmpDate.toInstant(), ZoneId.systemDefault());
 				}
 			} else if (Date.class.isAssignableFrom(type)) {
 				result = toDate(v);
@@ -2272,23 +2292,24 @@ public enum TypeUtils {
 		}
 		// Now for the illegal-but-convertible types
 		if (value instanceof Number) {
-			// TODO Check if this is greater than what Domino can handle and serialize if so
-			// CHECKME: Is "doubleValue" really needed. (according to help.nsf only Integer and Double is supported, so keep it)
 			return ((Number) value).doubleValue();
 
-		} else if (value instanceof java.util.Date || value instanceof java.sql.Date || value instanceof java.util.Calendar
-				|| value instanceof org.openntf.formula.DateTime) {
+		} else if (value instanceof java.util.Date || value instanceof LocalDate || value instanceof LocalTime || value instanceof OffsetDateTime ||
+				value instanceof java.util.Calendar || value instanceof org.openntf.formula.DateTime) {
 
 			lotus.domino.Session lsess = toLotus(session);
 			try {
 
 				lotus.domino.DateTime dt = null;
-				if (value instanceof java.sql.Time) {
-					dt = lsess.createDateTime((java.sql.Time) value);
+				if (value instanceof LocalTime) {
+					OffsetDateTime odt = OffsetDateTime.of(LocalDate.now(), (LocalTime)value, ZoneId.systemDefault().getRules().getOffset(Instant.now()));
+					dt = lsess.createDateTime(Date.from(odt.toInstant()));
 					dt.setAnyDate();
-				} else if (value instanceof java.sql.Date) {
-					dt = lsess.createDateTime((java.sql.Date) value);
+				} else if (value instanceof LocalDate) {
+					dt = lsess.createDateTime(DateTimeFormatter.ISO_LOCAL_DATE.format((LocalDate)value));
 					dt.setAnyTime();
+				} else if(value instanceof OffsetDateTime) {
+					dt = lsess.createDateTime(Date.from(((OffsetDateTime)value).toInstant()));
 				} else if (value instanceof java.util.Date) {
 					dt = lsess.createDateTime((java.util.Date) value);
 				} else if (value instanceof org.openntf.formula.DateTime) {
